Adicionando a página de profutos masculinos

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
     </nav>
 
     <img src="img/kala.jpg" id="kala"></a>
-    <a href="produtos.html"><img src="img/colefem.jpg" id="modafem"></a>
-    <a href="produtos.html"><img src="img/colemasc.jpg" id="modamasc"></a>
-    <a href="produtos.html"><img src="img/coleinfa.jpg" id="modainft"></a>
-    <a href="produtos.html"><img src="img/colejoias.jpg" id="joias"></a>
+    <a href="produtofem.html"><img src="img/colefem.jpg" id="modafem"></a>
+    <a href="produtomasc.html"><img src="img/colemasc.jpg" id="modamasc"></a>
+    <a href="produtoinfa.html"><img src="img/coleinfa.jpg" id="modainft"></a>
+    <a href="joias.html"><img src="img/colejoias.jpg" id="joias"></a>
 
     <footer>
       <p>Copyrigth@2023 - Todos os direitos reservados</p>
