--- a/produtomasc.html
+++ b/produtomasc.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOJA KALAHARI</title>
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
 </head>
 <body>
 
@@ -52,57 +51,58 @@
 
     </nav>
 
-    <h1 class="produto-titulo">Coleção Feminina</h1>
+    <h1 class="produto-titulo">Coleção Masculina</h1>
 
     <div class="produtos">
-        <div class="card">
-            <div class="produto-img">
-                <img src="img/vestpretorenda.jpg">
-            </div>
-            <div class="produto-nome">
-                <h1>Vestido em lurex</h1>
-            </div>
-            <div class="produto-preco">
-                <h1>R$ 7.814</h1>
-            </div>
-            <div class="produto-parcela">
-                <h1>12 x R$ 651,17</h1>
-            </div>       
-            <div>
-                <a href="descfem.html"></a><button class="botao-produto">Comprar</button>
-            </div>
-        </div>
 
         <div class="card">
             <div class="produto-img">
-                <img src="img/colefem1.jpeg">
+                <img src="img/masc2.jpg">
             </div>
             <div class="produto-nome">
-                <h1>Vestido com paetê</h1>
+                <h1>Jaqueta college</h1>
             </div>
             <div class="produto-preco">
-                <h1>R$ 25.508</h1>
+                <h1>R$ 159.250</h1>
             </div>
             <div class="produto-parcela">
-                <h1>12 x R$ 2.125,67</h1>
+                <h1>12 x R$ 13.270,83</h1>
             </div>    
             <div>
-                <button class="botao-produto">Comprar</button></a>
+                <a href="descmasc.html"><button class="botao-produto">Comprar</button></a>
             </div>
         </div>
 
         <div class="card">
             <div class="produto-img">
-                <img src="img/colefem3.jpeg">
+                <img src="img/colemasc2.jpeg">
             </div>
             <div class="produto-nome">
-                <h1>Vestido franzido</h1>
+                <h1>Camiseta com logo</h1>
             </div>
             <div class="produto-preco">
-                <h1>R$ 35.000</h1>
+                <h1>R$ 3.050</h1>
             </div>
             <div class="produto-parcela">
-                <h1>12 x R$ 2.916,67</h1>
+                <h1>12 x R$ 254,17</h1>
+            </div>       
+            <div>
+                <button class="botao-produto">Comprar</button>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="produto-img">
+                <img src="img/colemasc3.jpeg">
+            </div>
+            <div class="produto-nome">
+                <h1>Calça wide leg</h1>
+            </div>
+            <div class="produto-preco">
+                <h1>R$ 11.591</h1>
+            </div>
+            <div class="produto-parcela">
+                <h1>12 x R$ 965,92</h1>
             </div>  
             <div>
                 <button class="botao-produto">Comprar</button>
@@ -111,16 +111,16 @@
 
         <div class="card">
             <div class="produto-img">
-                <img src="img/colefem4.jpeg">
+                <img src="img/colemasc4.jpeg">
             </div>
             <div class="produto-nome">
-                <h1>Biquíni xadrez</h1>
+                <h1>Camiseta gráfica</h1>
             </div>
             <div class="produto-preco">
-                <h1>R$ 3.510</h1>
+                <h1>R$ 5.080</h1>
             </div>
             <div class="produto-parcela">
-                <h1>12 x R$ 292,50</h1>
+                <h1>12 x R$ 423,33</h1>
             </div>  
             <div>
                 <button class="botao-produto">Comprar</button>
@@ -129,16 +129,16 @@
 
         <div class="card">
             <div class="produto-img">
-                <img src="img/colefem5.jpeg">
+                <img src="img/colemasc5.jpeg">
             </div>
             <div class="produto-nome">
-                <h1>Vestido decote coração</h1>
+                <h1>Moletom Medusa</h1>
             </div>
             <div class="produto-preco">
-                <h1>R$ 18.500</h1>
+                <h1>R$ 6.505</h1>
             </div>
             <div class="produto-parcela">
-                <h1>12 x R$ 1.541,67</h1>
+                <h1>12 x R$ 542,08</h1>
             </div>  
             <div>
                 <button class="botao-produto">Comprar</button>
@@ -150,16 +150,16 @@
 
         <div class="card-2">
             <div class="produto-img-2">
-                <img src="img/colefem6.jpeg">
+                <img src="img/colemasc6.jpeg">
             </div>
             <div class="produto-nome-2">
-                <h1>Vestido sem alça</h1>
+                <h1>Camiseta com listras</h1>
             </div>
             <div class="produto-preco-2">
-                <h1>R$ 17.000</h1>
+                <h1>R$ 2.312</h1>
             </div>
             <div class="produto-parcela-2">
-                <h1>12 x R$ 1.416,67</h1>
+                <h1>12 x R$ 192,6</h1>
             </div>    
             <div>
                 <a href=""><button class="botao-produto-2">Comprar</button></a>
@@ -168,16 +168,16 @@
 
         <div class="card-2">
             <div class="produto-img-2">
-                <img src="img/colefem7.jpeg">
+                <img src="img/colemasc7.jpeg">
             </div>
             <div class="produto-nome-2">
-                <h1>Vestido de tricô</h1>
+                <h1>Camisa com botões</h1>
             </div>
             <div class="produto-preco-2">
-                <h1>R$ 10.400</h1>
+                <h1>R$ 10.000</h1>
             </div>
             <div class="produto-parcela-2">
-                <h1>12 x R$ 866,67</h1>
+                <h1>12 x R$ 833,33</h1>
             </div>    
             <div>
                 <a href=""><button class="botao-produto-2">Comprar</button></a>
@@ -186,16 +186,16 @@
 
         <div class="card-2">
             <div class="produto-img-2">
-                <img src="img/colefem8.jpeg">
+                <img src="img/colemasc8.jpeg">
             </div>
             <div class="produto-nome-2">
-                <h1>Bustier de borboleta</h1>
+                <h1>Bermuda salmão</h1>
             </div>
             <div class="produto-preco-2">
-                <h1>R$ 8.839</h1>
+                <h1>R$ 2.002</h1>
             </div>
             <div class="produto-parcela-2">
-                <h1>12 x R$ 736,58</h1>
+                <h1>12 x R$ 166,83</h1>
             </div>    
             <div>
                 <a href=""><button class="botao-produto-2">Comprar</button></a>
@@ -204,16 +204,16 @@
 
         <div class="card-2">
             <div class="produto-img-2">
-                <img src="img/colefem9.jpeg">
+                <img src="img/colemasc9.jpeg">
             </div>
             <div class="produto-nome-2">
-                <h1>Saia de jersey </h1>
+                <h1>Moletom com paca</h1>
             </div>
             <div class="produto-preco-2">
-                <h1>R$ 16.159</h1>
+                <h1>R$ 6.900</h1>
             </div>
             <div class="produto-parcela-2">
-                <h1>12 x R$ 1.346,58</h1>
+                <h1>R$ 6.900</h1>
             </div>    
             <div>
                 <a href=""><button class="botao-produto-2">Comprar</button></a>
@@ -222,16 +222,16 @@
 
         <div class="card-2">
             <div class="produto-img-2">
-                <img src="img/colefem10.jpeg">
+                <img src="img/colemasc10.jpeg">
             </div>
             <div class="produto-nome-2">
-                <h1>Vestido de festa longo</h1>
+                <h1>Calça cargo Mastodon</h1>
             </div>
             <div class="produto-preco-2">
-                <h1>R$ 6.999</h1>
+                <h1>R$ 9.113</h1>
             </div>
             <div class="produto-parcela-2">
-                <h1>12 x R$ 583,25</h1>
+                <h1>12 x R$ 759,42</h1>
             </div>    
             <div>
                 <a href=""><button class="botao-produto-2">Comprar</button></a>
