Adicionando a página de descrição das jóias

--- a/descjoias.html
+++ b/descjoias.html
@@ -56,34 +56,34 @@
     
         <div class="vestpaete">
 
-            <img id="grande" src="img/infa2.jpg">
+            <img id="grande" src="img/jois2.jpg">
           <div class="imgs">
-            <img id="menor1" src="img/infamenor1.jpg">
-            <img id="menor2" src="img/infamenor2.jpg">
-            <img id="menor3" src="img/infamenor3.jpg">
+            <img id="menor1" src="img/joiamenor1.jpg">
+            <img id="menor2" src="img/joiamenor2.jpg">
+            <img id="menor3" src="img/joiamenor3.jpg">
           </div>
 
             <div class="produtoinfo">
-                <h1>Camisa com logo</h1>
-                <h1 id="preço">R$ 3.866</h1>
-                <h2 id="parcela">12 x R$ 322,17</h2>
+                <h1>Colar Dancing Swan</h1>
+                <h1 id="preço">R$ 12.867</h1>
+                <h2 id="parcela">12 x R$ 1.072,25</h2>
                 <h3 id="taxa">Taxas de importação inclusas</h3>
-                 <h2 id="seltam">Selecione o seu tamanho:</h2>
+                 <h2 id="seltam">Tamanho Único</h2>
                  <div id="tam">
-                 <p>4</p>
-                 <p>ㅤ</p>
-                 <p>6</p>
-                 <p>ㅤ</p>
-                 <p>8</p>
-                 <p>ㅤ</p>
-                 <p>10</p>
-                 <p>ㅤ</p>
-                 <p>12</p>
-                 <p>ㅤ</p>
-                 <p>14</p>
-                 <p>ㅤ</p>
-                 <p>16</p>
-              </div>
+                    <p>ㅤ</p>
+                    <p>ㅤ</p>
+                    <p>ㅤ</p>
+                    <p>ㅤ</p>
+                    <p>ㅤ</p>
+                    <p>ㅤ</p>
+                    <p>ㅤ</p>
+                    <p>ㅤ</p>
+                    <p>ㅤ</p>
+                    <p>ㅤ</p>
+                    <p>ㅤ</p>
+                    <p>ㅤ</p>
+                    <p>ㅤ</p>
+                 </div>
                 <button>Adicionar ao carrinho</button>
           </div>
         <footer id="rodape">      
