--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
   <link rel="stylesheet" href="css/contato.css">
   <link rel="shortcut icon" href="img/logo.png" type="image/png">
-  <title>Kalahari</title>
+  <title>LOJA KALAHARI</title>
 </head>
 
 <body>
